Turn the modlist command into a client command. Also make the colours less bright.